--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 Resources/align_text_center.png
 Resources/exit.png
 Resources/file_yellow_open.png
+.vs/AnAD4lyse/FileContentIndex/e94eb3eb-7238-4776-a3d7-4f246b350f6b.vsidx
